--- a/src/templates/app/recipe/form.phtml
+++ b/src/templates/app/recipe/form.phtml
@@ -172,6 +172,6 @@
             </div>
         </div>
 
-        <?php $this->insert("inc/common/stepper_actions") ?>
+        <?php $this->insert("inc/common/stepper_actions", ['cmyk' => true]) ?>
     </div>
 </form>
