--- a/src/templates/app/recipe/form.phtml
+++ b/src/templates/app/recipe/form.phtml
@@ -24,7 +24,10 @@
     <div class="stepper stepper-pills first" id="mt-recipe-stepper">
         <?php $this->insert("inc/common/stepper_nav", ['steps' => [
             __('app.common.step_info'),
-            __('app.common.step_page'),
+            __('app.common.step_page_1_left'),
+            __('app.common.step_page_1_right'),
+            __('app.common.step_page_2_left'),
+            __('app.common.step_page_2_right'),
             __('app.common.step_generate_pdf')
         ]]) ?>
 
